deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fi-driver
  namespace: fiuber-ns
spec:
  defaultBackend:
    service:
      name: fi-driver
      port:
        name: fi-driver-port

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: fi-driver
  name: fi-driver
  namespace: fiuber-ns
spec:
  selector:
    app: fi-driver
  type: ClusterIP
  ports:
  - name: fi-driver-port
    protocol: TCP
    port: 80
    targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name:  fi-driver
  namespace: fiuber-ns
  labels:
    app:  fi-driver
spec:
  selector:
    matchLabels:
      app: fi-driver
  replicas: 1
  template:
    metadata:
      name: fi-driver
      labels:
        app:  fi-driver
    spec:
      containers:
      - name:  fi-driver
        image:  cqueirolo/driver-app:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          httpGet:
            path: /driver/ping
            port: 8080
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /driver/ping
            port: 8080
          timeoutSeconds: 5
        ports:
        - containerPort: 8080
          protocol: TCP
